--- a/TestImplant/Views/Shared/_Layout.cshtml
+++ b/TestImplant/Views/Shared/_Layout.cshtml
@@ -21,9 +21,7 @@
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
-                            <li>@Html.ActionLink("À propos de", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "ContactForm", "Contact")</li>
                         </ul>
                     </nav>
                 </div>
